added server api for ss
